Rewrite dproj parsing